// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtLoadMore should render default AtLoadMore 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button at-button--normal at-button--full"
    >
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <view
        class="at-button__text"
      >
        
        查看更多
        
      </view>
    </view>
  </view>
</view>
`;

exports[`AtLoadMore should render prop status -- loading 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-activity-indicator at-activity-indicator--center at-activity-indicator--isopened"
  >
    <view
      class="at-activity-indicator__body"
    >
      <view
        class="at-loading"
        style="width: 1.024rem; height: 1.024rem;"
      >
        
        <view
          class="at-loading__ring"
          style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
        />
        <view
          class="at-loading__ring"
          style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
        />
        <view
          class="at-loading__ring"
          style="width: 1.024rem; height: 1.024rem; border: 1px solid #6190e8; border-color: #6190e8 transparent transparent transparent;"
        />
        
      </view>
    </view>
    <text
      class="at-activity-indicator__content"
    >
      加载中
    </text>
  </view>
</view>
`;

exports[`AtLoadMore should render prop status -- more 1`] = `
<view
  class="at-load-more"
>
  <view
    class="at-load-more__cnt"
  >
    <view
      class="at-button at-button--normal at-button--full"
    >
      <button
        class="at-button__wxbutton"
        lang="lang"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <view
        class="at-button__text"
      >
        
        查看更多
        
      </view>
    </view>
  </view>
</view>
`;

exports[`AtLoadMore should render prop status -- noMore 1`] = `
<view
  class="at-load-more"
>
  <text
    class="at-load-more__tip"
  >
    没有更多
  </text>
</view>
`;
